Fix wrapping priority

--- a/site/src/components/components/LivePreviewControls.module.css
+++ b/site/src/components/components/LivePreviewControls.module.css
@@ -1,4 +1,8 @@
 .controls {
+  display: flex;
+  gap: var(--salt-spacing-100);
+  justify-content: space-between;
+  flex-wrap: wrap;
   padding: calc(var(--salt-size-unit) * 2) 0;
   border-bottom: var(--salt-size-border) var(--salt-separable-borderStyle) var(--salt-separable-tertiary-borderColor);
   background-color: var(--salt-container-primary-background);
@@ -7,6 +11,15 @@
 .stickyControls {
   position: sticky;
   top: var(--navbar-height);
+}
+
+.toggleGroupsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--salt-spacing-100);
+  flex-grow: 1;
+  /* This is the width of density toggle group. Without this, next switch will wrap first before this container */
+  flex-basis: 289px;
 }
 
 .density,
@@ -22,9 +35,12 @@
   flex: 1;
 }
 
-.switchAlignment {
+.themeNextSwitch {
+  flex-shrink: 0;
   margin-top: var(--salt-spacing-50);
+  flex-basis: 150px;
 }
 .mobileSwitchAlignment {
+  /* This will be applied regardless of wrapping or not.  */
   margin-top: var(--salt-spacing-300);
 }
